# pipeline_gen_ia

./: README.md  app.py  database.py  docker-compose.yml  mkdocs.yml  pyproject.toml  schemas.py
docs/: index.md
site/: index.html  objects.inv
site/search/: search_index.json
